# stmcli

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
stmcli/: database.py  models.py
