[project]
name = "stmcli"
version = "1.2.2"
description = "The unofficial STM CLI client."
readme = "README.md"
requires-python = ">=3.3"
license = { text = "MIT" }
authors = [
  { name = "Pascal Boardman / Philippe Dagenais", email = "pascalboardman@gmail.com" }
]
urls = { "Homepage" = "https://github.com/jingl3s/stmcli" }
keywords = ["stm", "montreal", "autobus", "bus", "schedule", "horaire"]
classifiers = [
  "Development Status :: Working",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
]
dependencies = ["peewee", "unicodecsv", "xmltodict"]
